# 0x484558.github.io

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  Trunk.toml  about.md  build.rs  config.toml  index.html
.github/workflows/: deploy.yml
content/: _index.md
content/blog/: _index.md  cybersec1.md  monoculture.md  web-at-war.md
content/blog/portal2-music/: beethoven.opus  index.md
posts/: cybersec1.md  cybersecurity.md  web-at-war.md  welcome.md
public/: style.css
src/: about.rs  blog.rs  components.rs  lib.rs  main.rs  pages.rs
static/: style.css
templates/: base.html  index.html  page.html  section.html  taxonomy_list.html  taxonomy_single.html
templates/shortcodes/: audio.html
